Modify index.html with added image

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <script src="script.js"></script>
 </head>
 
-<body>
+<body style="text-align: center;">
     <h1>Rock-Paper-Scissors Game</h1>
     <h2>Welcome! Let's Play.</h2>
+    <img src="Rock-paper-scissors.svg.png" alt="Game image" height="400px" width="500px">
 </body>
 
 </html>
